unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>TEXT(ffps_forterro__CatalogueItem__r.ffps_forterro__Category__c)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>