unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__CatalogueItem__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__CatalogueItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalogue Item</label>
    <referenceTo>ffps_forterro__CatalogueItem__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>