unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__CreateTask__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__CreateTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>