unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__DeliveryDate__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>