unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__ErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__ErrorDetails__c</fullName>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>