unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__HasError__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__HasError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>