unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__ProjectTask__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__ProjectTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>pse__Project_Task__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>