unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__Reconciled__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconciled</label>
    <type>Checkbox</type>
</CustomField>