unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__RequestDetails__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__RequestDetails__c</fullName>
    <label>Request Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>