unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__RequestedDate__c</fullName>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>