unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__Status__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__Status__c</fullName>
    <formula>IF( ISBLANK(TEXT(ffps_forterro__StatusOverride__c)) = false , TEXT(ffps_forterro__StatusOverride__c), 
  IF( ISBlank(ffps_forterro__ProjectTask__c), 'New', 
    IF( ffps_forterro__InDispute__c, 'Disputed',
      IF( ffps_forterro__Reconciled__c, 'Reconciled',
        IF( ffps_forterro__ProjectTask__r.pse__Completed__c, 'Delivered' , 
          IF( ffps_forterro__ProjectTask__r.pse__Started__c, 'Confirmed' , 'Requested'))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>