unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__StatusOverride__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__StatusOverride__c</fullName>
    <label>Status Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ffps_forterro__ServiceRequestStatus</valueSetName>
    </valueSet>
</CustomField>