unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__TemplateTaskId__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__TemplateTaskId__c</fullName>
    <label>Template Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>