unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/ffps_forterro__Type__c.field-meta.xml
<CustomField>
    <fullName>ffps_forterro__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSP</fullName>
                <default>true</default>
                <label>FSP</label>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
            <value>
                <fullName>SupportBillable</fullName>
                <label>Support - Billable</label>
            </value>
            <value>
                <fullName>SupportCredited</fullName>
                <label>Support - Extended Support (Credited)</label>
            </value>
            <value>
                <fullName>smallrequest</fullName>
                <label>Small Request</label>
            </value>
            <value>
                <fullName>Small Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>