unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Free_work__c.field-meta.xml
<CustomField>
    <fullName>Free_work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free work?</label>
    <type>Checkbox</type>
</CustomField>