unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <formula>IF (
      Not(IsBlank( ffps_forterro__CatalogueItem__c)), ffps_forterro__CatalogueItem__r.ffps_forterro__ItemName__c ,'None')</formula>
    <label>Item Name</label>
    <type>Text</type>
</CustomField>