unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Ongoing_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by FLOW when an assignment has been created.</description>
    <label>Ongoing Task Created</label>
    <type>Checkbox</type>
</CustomField>