unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Request</label>
    <referenceTo>pse__Resource_Request__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>