unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant (Business Process Functional)</fullName>
                <isActive>false</isActive>
                <label>Consultant (Business Process Functional)</label>
            </value>
            <value>
                <fullName>Consultant (Finance)</fullName>
            </value>
            <value>
                <fullName>Consultant (HR)</fullName>
            </value>
            <value>
                <fullName>Consultant (Infrastructure)</fullName>
            </value>
            <value>
                <fullName>Consultant (Logistic Production)</fullName>
            </value>
            <value>
                <fullName>Consultant (Managed Services)</fullName>
            </value>
            <value>
                <fullName>Consultant (Principal)</fullName>
            </value>
            <value>
                <fullName>Consultant Developer (App Development &amp; Integrations)</fullName>
                <isActive>false</isActive>
                <label>Consultant Developer (App Development &amp; Integrations)</label>
            </value>
            <value>
                <fullName>Consultant Developer IBS (App Development &amp; Integrations)</fullName>
                <isActive>false</isActive>
                <label>Consultant Developer IBS (App Development &amp; Integrations)</label>
            </value>
            <value>
                <fullName>Consultant Developer NSS (App Development &amp; Integrations)</fullName>
                <isActive>false</isActive>
                <label>Consultant Developer NSS (App Development &amp; Integrations)</label>
            </value>
            <value>
                <fullName>Consultant IBS (Business Process Functional)</fullName>
                <isActive>false</isActive>
                <label>Consultant IBS (Business Process Functional)</label>
            </value>
            <value>
                <fullName>Consultant NSS (Business Process Functional)</fullName>
                <isActive>false</isActive>
                <label>Consultant NSS (Business Process Functional)</label>
            </value>
            <value>
                <fullName>Custom Development</fullName>
                <isActive>false</isActive>
                <label>Custom Development</label>
            </value>
            <value>
                <fullName>Customer Success</fullName>
                <isActive>false</isActive>
                <label>Customer Success</label>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
            <value>
                <fullName>Database Engineer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Developer (Cust)</fullName>
                <isActive>false</isActive>
                <label>Developer (Cust)</label>
            </value>
            <value>
                <fullName>Developer (PS)</fullName>
                <isActive>false</isActive>
                <label>Developer (PS)</label>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>External (Sub Consulting)</fullName>
                <isActive>false</isActive>
                <label>External (Sub Consulting)</label>
            </value>
            <value>
                <fullName>Infrastructure Consultant</fullName>
                <isActive>false</isActive>
                <label>Infrastructure Consultant</label>
            </value>
            <value>
                <fullName>Infrastructure Consultant - Accounts</fullName>
                <isActive>false</isActive>
                <label>Infrastructure Consultant - Accounts</label>
            </value>
            <value>
                <fullName>Infrastructure Consultant IBS</fullName>
                <isActive>false</isActive>
                <label>Infrastructure Consultant IBS</label>
            </value>
            <value>
                <fullName>Infrastructure Consultant NSS</fullName>
                <isActive>false</isActive>
                <label>Infrastructure Consultant NSS</label>
            </value>
            <value>
                <fullName>Infrastructure Consultant - Tech</fullName>
                <isActive>false</isActive>
                <label>Infrastructure Consultant - Tech</label>
            </value>
            <value>
                <fullName>Infrastructure Consultant - Web</fullName>
                <isActive>false</isActive>
                <label>Infrastructure Consultant - Web</label>
            </value>
            <value>
                <fullName>Junior Consultant (Ramp-up)</fullName>
                <isActive>false</isActive>
                <label>Junior Consultant (Ramp-up)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>