unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Select_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Select_Project_Id__c</fullName>
    <description>Populated by FLOW</description>
    <label>Select Project Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>