unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Service_Points__c.field-meta.xml
<CustomField>
    <fullName>Service_Points__c</fullName>
    <formula>ffps_forterro__CatalogueItem__r.ffps_forterro__ServicePoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>