unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Sub_category__c.field-meta.xml
<CustomField>
    <fullName>Sub_category__c</fullName>
    <formula>TEXT(ffps_forterro__CatalogueItem__r.ffps_forterro__SubCategory__c)</formula>
    <label>Sub-category</label>
    <type>Text</type>
</CustomField>