unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Support_Ticket_Link__c.field-meta.xml
<CustomField>
    <fullName>Support_Ticket_Link__c</fullName>
    <label>Support Ticket Link</label>
    <type>Url</type>
</CustomField>