unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Task_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_End_Date__c</fullName>
    <description>Task End Date</description>
    <label>Task End Date</label>
    <type>Date</type>
</CustomField>