unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Task_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Task_Estimated_Hours__c</fullName>
    <formula>ffps_forterro__ProjectTask__r.pse__Estimated_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>