unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <description>Used to create Project Tasks for ongoing projects.</description>
    <label>Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>