unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Task_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Start_Date__c</fullName>
    <description>Task Start Date</description>
    <label>Task Start Date</label>
    <type>Date</type>
</CustomField>