unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/fields/Trigger_Ongoing_Task__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Ongoing_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by FLOW. Used to create an assignment, and task from a customer request.</description>
    <label>Trigger Ongoing Task</label>
    <type>Checkbox</type>
</CustomField>