unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/listViews/ffps_forterro__All.listView-meta.xml
<ListView>
    <fullName>ffps_forterro__All</fullName>
    <columns>NAME</columns>
    <columns>ffps_forterro__Type__c</columns>
    <columns>ffps_forterro__RequestDetails__c</columns>
    <columns>ffps_forterro__ProjectTask__c</columns>
    <columns>ffps_forterro__Status__c</columns>
    <columns>ffps_forterro__Account__c</columns>
    <columns>ffps_forterro__RequestedDate__c</columns>
    <columns>ffps_forterro__DeliveryDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Region__c</columns>
    <columns>Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>