unpackaged/main/default/objects/ffps_forterro__ServiceRequest__c/listViews/JVS_All_Service_Requests.listView-meta.xml
<ListView>
    <fullName>JVS_All_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>ffps_forterro__Type__c</columns>
    <columns>Task_Name__c</columns>
    <columns>ffps_forterro__RequestedDate__c</columns>
    <columns>ffps_forterro__RequestDetails__c</columns>
    <columns>ffps_forterro__Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ffps_forterro__ProjectTask__c</columns>
    <columns>Resource__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Trigger_Ongoing_Task__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MyRegion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>JVS All Service Requests</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Services_Jeeves</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>